# sail

./: LICENSE  README.md
sail/: CMakeLists.txt  Doxyfile.in  to_do.txt
sail/dependencies/gtest/: CMakeLists.txt
sail/dependencies/jsoncpp/: CMakeLists.txt  jsoncpp.cpp
sail/dependencies/jsoncpp/json/: json-forwards.h
sail/examples/: CMakeLists.txt  examples.h  main.cpp  tvs_examples.cpp  value_ref_examples.cpp
sail/public/ua/: enums.h  lists.h  macros.h  maps.h  metas.h  ua.h  ua_meta.h  ua_ref.h  ua_src.h  values.h
sail/public/ua/detail/: container_trait.h  key_converter.h  literal_utils.h  member_detector.h  safe_implicit_value_converter.h  static_list_accessor.h  static_list_accessor_impl.h  static_map_accessor.h  static_map_accessor_impl.h  static_meta_class.h  static_meta_class_impl.h  static_meta_enum.h  static_meta_enum_impl.h  static_meta_value.h  static_meta_value_impl.h  std_utils.h  traits.h  utf_converter.h
sail/public/utf8/: checked.h
sail/unittests/: CMakeLists.txt
sail/unittests/ua/: CMakeLists.txt
sail/unittests/ua/src/: at_converter.cpp  at_key_converter.cpp  at_list_accessor.cpp  at_list_ref.cpp  at_macros.cpp  at_map_accessor.cpp  at_map_ref.cpp  at_meta_class.cpp  at_meta_enum.cpp  at_meta_value.cpp  at_sfinae_method_detector.cpp  at_sfinae_type_detector.cpp  at_value_ref.cpp  at_value_traits.cpp  common_types.h  jsoncpp_support.h  main.cpp
